@@ -113,6 +113,8 @@ Default BBFILES are the .bb files in the current directory.""" )
 
     cooker = bb.cooker.BBCooker(configuration)
 
+    cooker.parseConfiguration()
+
     if configuration.profile:
         try:
             import cProfile as profile
